--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lottie-react": "^2.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "svg-path-properties": "^1.3.0",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
